--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7fd8ce">  <td>22/12/02 17:35:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Uploadtest.EndSignInTest()[pri:0, instance:testpackage.Uploadtest@4c583ecf]">&lt;&lt;EndSignInTest</td> 
+<tr bgcolor="7fd8ce">  <td>22/12/03 05:33:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;iframetest.EndSignInTest()[pri:0, instance:testpackage.iframetest@4c583ecf]">&lt;&lt;EndSignInTest</td> 
 <td>&nbsp;</td>  <td>main@1239807799</td>   <td></td> </tr>
-<tr bgcolor="7fd8ce">  <td>22/12/02 17:35:29</td>   <td>-7929</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Uploadtest.StartSignInTest()[pri:0, instance:testpackage.Uploadtest@4c583ecf]">&gt;&gt;StartSignInTest</td> 
-<td>&nbsp;</td>  <td>main@1239807799</td>   <td></td> </tr>
-<tr bgcolor="7fd8ce">  <td>22/12/02 17:35:37</td>   <td>-473</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Uploadtest.testupload()[pri:0, instance:testpackage.Uploadtest@4c583ecf]">testupload</td> 
+<tr bgcolor="7fd8ce">  <td>22/12/03 05:33:05</td>   <td>-424</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="iframetest.Frametest()[pri:0, instance:testpackage.iframetest@4c583ecf]">Frametest</td> 
   <td>main@1239807799</td>   <td></td> </tr>
+<tr bgcolor="7fd8ce">  <td>22/12/03 05:32:59</td>   <td>-6359</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;iframetest.StartSignInTest()[pri:0, instance:testpackage.iframetest@4c583ecf]">&gt;&gt;StartSignInTest</td> 
+<td>&nbsp;</td>  <td>main@1239807799</td>   <td></td> </tr>
 </table>
