--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,88 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="67e66c">  <td>22/12/09 01:43:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.StartSignInTest()[pri:0, instance:testpackage.LoginPageTest@2a266d09]">&gt;&gt;StartSignInTest</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="67e66c">  <td>22/12/09 01:43:09</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginbuttontest()[pri:1, instance:testpackage.LoginPageTest@2a266d09]">loginbuttontest</td> 
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexTest.result_20test()[pri:0, instance:testpackage.IndexTest@186f8716]">result_20test</td> 
   <td>main@482052083</td>   <td></td> </tr>
-<tr bgcolor="cddd80">  <td>22/12/09 01:43:09</td>   <td>-83</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.getDriver()[pri:0, instance:testpackage.LoginPageTest@2a266d09]">&gt;&gt;getDriver</td> 
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:33</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexTest.indexTest()[pri:0, instance:testpackage.IndexTest@186f8716]">&gt;&gt;indexTest</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:33</td>   <td>6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexTest.tabListTest()[pri:0, instance:testpackage.IndexTest@186f8716]">tabListTest</td> 
+  <td>main@482052083</td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:32</td>   <td>-30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexTest.indexByKeywordTest()[pri:0, instance:testpackage.IndexTest@186f8716]">indexByKeywordTest</td> 
+  <td>main@482052083</td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:33</td>   <td>-25</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexTest.indexByNameTest()[pri:0, instance:testpackage.IndexTest@186f8716]">indexByNameTest</td> 
+  <td>main@482052083</td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:33</td>   <td>-9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexTest.multiAssetTabTest()[pri:0, instance:testpackage.IndexTest@186f8716]">multiAssetTabTest</td> 
+  <td>main@482052083</td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:33</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexTest.indexTest()[pri:0, instance:testpackage.IndexTest@186f8716]">&gt;&gt;indexTest</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:33</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexTest.indexTest()[pri:0, instance:testpackage.IndexTest@186f8716]">&gt;&gt;indexTest</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:33</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexTest.indexTest()[pri:0, instance:testpackage.IndexTest@186f8716]">&gt;&gt;indexTest</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:33</td>   <td>-17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexTest.indexType()[pri:0, instance:testpackage.IndexTest@186f8716]">indexType</td> 
+  <td>main@482052083</td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:33</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexTest.result_10test()[pri:0, instance:testpackage.IndexTest@186f8716]">result_10test</td> 
+  <td>main@482052083</td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:33</td>   <td>9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexTest.weekColumntest()[pri:0, instance:testpackage.IndexTest@186f8716]">weekColumntest</td> 
+  <td>main@482052083</td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:33</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexTest.indexTest()[pri:0, instance:testpackage.IndexTest@186f8716]">&gt;&gt;indexTest</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:33</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexTest.indexTest()[pri:0, instance:testpackage.IndexTest@186f8716]">&gt;&gt;indexTest</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:33</td>   <td>-6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexTest.privateMarketTabTest()[pri:0, instance:testpackage.IndexTest@186f8716]">privateMarketTabTest</td> 
+  <td>main@482052083</td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:33</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexTest.indexTest()[pri:0, instance:testpackage.IndexTest@186f8716]">&gt;&gt;indexTest</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:32</td>   <td>-68</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexTest.alternativesTabTest()[pri:0, instance:testpackage.IndexTest@186f8716]">alternativesTabTest</td> 
+  <td>main@482052083</td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:33</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexTest.indexTest()[pri:0, instance:testpackage.IndexTest@186f8716]">&gt;&gt;indexTest</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:32</td>   <td>-41</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexTest.fixedIncomeTabTest()[pri:0, instance:testpackage.IndexTest@186f8716]">fixedIncomeTabTest</td> 
+  <td>main@482052083</td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:33</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexTest.indexTest()[pri:0, instance:testpackage.IndexTest@186f8716]">&gt;&gt;indexTest</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:33</td>   <td>-21</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexTest.indexFamilyTest()[pri:0, instance:testpackage.IndexTest@186f8716]">indexFamilyTest</td> 
+  <td>main@482052083</td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:32</td>   <td>-63</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexTest.assetTypeTest()[pri:0, instance:testpackage.IndexTest@186f8716]">assetTypeTest</td> 
+  <td>main@482052083</td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:32</td>   <td>-51</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexTest.equityTabTest()[pri:0, instance:testpackage.IndexTest@186f8716]">equityTabTest</td> 
+  <td>main@482052083</td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:32</td>   <td>-36</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexTest.geoRegionTest()[pri:0, instance:testpackage.IndexTest@186f8716]">geoRegionTest</td> 
+  <td>main@482052083</td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:33</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexTest.indexTest()[pri:0, instance:testpackage.IndexTest@186f8716]">&gt;&gt;indexTest</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:33</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexTest.indexTest()[pri:0, instance:testpackage.IndexTest@186f8716]">&gt;&gt;indexTest</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:33</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexTest.indexTest()[pri:0, instance:testpackage.IndexTest@186f8716]">&gt;&gt;indexTest</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:33</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexTest.indexTest()[pri:0, instance:testpackage.IndexTest@186f8716]">&gt;&gt;indexTest</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:33</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexTest.indexTest()[pri:0, instance:testpackage.IndexTest@186f8716]">&gt;&gt;indexTest</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:32</td>   <td>-76</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexTest.allIndexTabTest()[pri:0, instance:testpackage.IndexTest@186f8716]">allIndexTabTest</td> 
+  <td>main@482052083</td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:33</td>   <td>-13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexTest.marketingTextTest()[pri:0, instance:testpackage.IndexTest@186f8716]">marketingTextTest</td> 
+  <td>main@482052083</td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:33</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexTest.indexTest()[pri:0, instance:testpackage.IndexTest@186f8716]">&gt;&gt;indexTest</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:32</td>   <td>-58</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexTest.dayColumntest()[pri:0, instance:testpackage.IndexTest@186f8716]">dayColumntest</td> 
+  <td>main@482052083</td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:33</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexTest.indexTest()[pri:0, instance:testpackage.IndexTest@186f8716]">&gt;&gt;indexTest</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="94f07b">  <td>22/12/21 19:17:33</td>   <td>14</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.quitbrowser()[pri:0, instance:testpackage.IndexTest@186f8716]">&lt;&lt;quitbrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:33</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexTest.indexTest()[pri:0, instance:testpackage.IndexTest@186f8716]">&gt;&gt;indexTest</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="94f07b">  <td>22/12/21 19:17:32</td>   <td>-161</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.getDriver()[pri:0, instance:testpackage.IndexTest@186f8716]">&gt;&gt;getDriver</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@482052083</td>   <td></td> </tr>
-<tr bgcolor="67e66c">  <td>22/12/09 01:43:09</td>   <td>14</td> <td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.EndSignInTest()[pri:0, instance:testpackage.LoginPageTest@2a266d09]">&lt;&lt;EndSignInTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="cddd80">  <td>22/12/09 01:43:09</td>   <td>15</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.quitbrowser()[pri:0, instance:testpackage.LoginPageTest@2a266d09]">&lt;&lt;quitbrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:33</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexTest.indexTest()[pri:0, instance:testpackage.IndexTest@186f8716]">&gt;&gt;indexTest</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:32</td>   <td>-46</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexTest.esgTabTest()[pri:0, instance:testpackage.IndexTest@186f8716]">esgTabTest</td> 
+  <td>main@482052083</td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:33</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IndexTest.result_50test()[pri:0, instance:testpackage.IndexTest@186f8716]">result_50test</td> 
+  <td>main@482052083</td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:33</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexTest.indexTest()[pri:0, instance:testpackage.IndexTest@186f8716]">&gt;&gt;indexTest</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>22/12/21 19:17:33</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IndexTest.indexTest()[pri:0, instance:testpackage.IndexTest@186f8716]">&gt;&gt;indexTest</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
 </table>
