--- a/test-output/old/Internet/toc.html
+++ b/test-output/old/Internet/toc.html
@@ -9,29 +9,29 @@
 <table border='1' width='100%'>
 <tr valign='top'>
 <td>2 tests</td>
-<td><a target='mainFrame' href='classes.html'>17 classes</a></td>
-<td>47 methods:<br/>
+<td><a target='mainFrame' href='classes.html'>18 classes</a></td>
+<td>49 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
-&nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (30)</a></td>
+&nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (32)</a></td>
 </tr>
 <tr>
 <td><a target='mainFrame' href='groups.html'>0 group</a></td>
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
-<table width='100%' class='test-failed'>
+<table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>RegressionTest (13/2/0)</td><td valign='top' align='right'>
-  <a href='RegressionTest.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>EdgeTest (237/0/0)</td><td valign='top' align='right'>
+  <a href='EdgeTest.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
-<table width='100%' class='test-skipped'>
+<table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>EdgeTest (31/0/1)</td><td valign='top' align='right'>
-  <a href='EdgeTest.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>RegressionTest (15/0/0)</td><td valign='top' align='right'>
+  <a href='RegressionTest.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
